fixed font for calculator on mobile screen

--- a/src/components/Converter/Converter.css
+++ b/src/components/Converter/Converter.css
@@ -94,7 +94,7 @@
   border: none;
   height: 20px;
   text-align: right;
-  font-size: 20px;
+  font-size: 12px;
 }
 @media (max-width: 600px) {
   .converter-input {
